src/test/deca/codegen/valid/decaObjet/emptyClass/00selfComparisonEq.deca
// Description:
//    test qui compare l'égalité d'un objet à lui-même
//
// Resultats:
//    a == a
//
// Historique:
//    cree le 15/06/2022

class A {
    
}
{
    A a = new A();

    if (a == a) {
        println("a == a");
    }
}